--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -10,11 +10,11 @@
 //   transition: all 0.5s ease-in-out;
 // }
 
-//.fac-staf-stu-mobile {
-//  padding-left: 20px !important;
-//  font-weight: 500;
-//  line-height: 2.5em;
-//}
+.fac-staf-stu-mobile {
+ padding-left: 20px !important;
+ font-weight: 500;
+ line-height: 2.5em;
+}
 
 //#nav-faculty, #nav-academics, #nav-alumni {
 //  padding-left: 0px;
@@ -282,7 +282,7 @@
   background: #424448;
 }
 
-.visit-give-mobile {
+ul.nav.navbar-nav li .visit-give-mobile {
   background: $gray;
   color: $white;
   font-size: 1.0em;
@@ -302,7 +302,7 @@
   // display: none;
 }
 
-.apply-mobile {
+ul.nav.navbar-nav li .apply-mobile {
   background: #d11242;
   color: white;
   font-size: 1.0em;
@@ -948,13 +948,18 @@ body{
     color: #fff;
   }
   a.btn.btn-default.visit-give-mobile, a.btn.btn-default.give-mobile, a.btn.btn-default.apply-mobile {
-    width: 9%;
-    position: relative;
-    top: -5.7em;
+    // width: 9%;
+    // position: relative;
+    // top: -5.7em;
     text-align: center;
-    border-radius: 0 0 10px 10px;
-    padding: 0.3em 1.2em !important;
+    // border-radius: 0 0 10px 10px;
+    // padding: 0.3em 1.2em !important;
     text-transform: uppercase;
+
+    width: 9% !important;
+    top: -6.7em;
+    border-radius: 0 0 10px 10px !important;
+    padding: 0.3em 1.2em !important;
   }
   .visit-give-mobile, .apply-mobile {
     font-size: 1.2em;
@@ -1045,6 +1050,12 @@ body{
   .navbar-nav > li#nav-search > a {
       padding: 8px 1em;
   }
+  li.collapse.navbar-collapse {
+    position: inherit;
+  }
+  li.dropdown.collapse.navbar-collapse {
+    position: relative;
+  }
 }
 @media (min-width: $screen-lg-min) {
   .header-container, .container-fluid {
@@ -1095,12 +1106,24 @@ body{
   }
   a.btn.btn-default.visit-give-mobile {
       right: 27.77%;
+      width: 9% !important;
+      top: -6.7em;
+      border-radius: 0 0 10px 10px !important;
+      padding: 0.3em 1.2em !important;
   }
   a.btn.btn-default.give-mobile {
       right: 18.6%;
+      width: 9% !important;
+      top: -6.7em;
+      border-radius: 0 0 10px 10px !important;
+      padding: 0.3em 1.2em !important;
   }
   a.btn.btn-default.apply-mobile {
       right: 9.4%;
+      width: 9% !important;
+      top: -6.7em;
+      border-radius: 0 0 10px 10px !important;
+      padding: 0.3em 1.2em !important;
   }
 
 //  .pushdown-menu {
