--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7416,6 +7416,12 @@ header {
   text-align: center;
 }
 
+.fac-staf-stu-mobile {
+  padding-left: 20px !important;
+  font-weight: 500;
+  line-height: 2.5em;
+}
+
 .navbar {
   border: 0;
   margin-bottom: 0;
@@ -7491,7 +7497,7 @@ header {
   background: #424448;
 }
 
-.visit-give-mobile {
+ul.nav.navbar-nav li .visit-give-mobile {
   background: #555555;
   color: #fff;
   font-size: 1.0em;
@@ -7510,7 +7516,7 @@ header {
   transition: background .25s ease;
 }
 
-.apply-mobile {
+ul.nav.navbar-nav li .apply-mobile {
   background: #d11242;
   color: white;
   font-size: 1.0em;
@@ -8052,13 +8058,12 @@ span.fa.fa-search.search-desktop {
   }
 
   a.btn.btn-default.visit-give-mobile, a.btn.btn-default.give-mobile, a.btn.btn-default.apply-mobile {
-    width: 9%;
-    position: relative;
-    top: -5.7em;
     text-align: center;
-    border-radius: 0 0 10px 10px;
-    padding: 0.3em 1.2em !important;
     text-transform: uppercase;
+    width: 9% !important;
+    top: -6.7em;
+    border-radius: 0 0 10px 10px !important;
+    padding: 0.3em 1.2em !important;
   }
 
   .visit-give-mobile, .apply-mobile {
@@ -8169,6 +8174,14 @@ span.fa.fa-search.search-desktop {
   .navbar-nav > li#nav-search > a {
     padding: 8px 1em;
   }
+
+  li.collapse.navbar-collapse {
+    position: inherit;
+  }
+
+  li.dropdown.collapse.navbar-collapse {
+    position: relative;
+  }
 }
 @media (min-width: 1200px) {
   .header-container, .container-fluid {
@@ -8231,14 +8244,26 @@ span.fa.fa-search.search-desktop {
 
   a.btn.btn-default.visit-give-mobile {
     right: 27.77%;
+    width: 9% !important;
+    top: -6.7em;
+    border-radius: 0 0 10px 10px !important;
+    padding: 0.3em 1.2em !important;
   }
 
   a.btn.btn-default.give-mobile {
     right: 18.6%;
+    width: 9% !important;
+    top: -6.7em;
+    border-radius: 0 0 10px 10px !important;
+    padding: 0.3em 1.2em !important;
   }
 
   a.btn.btn-default.apply-mobile {
     right: 9.4%;
+    width: 9% !important;
+    top: -6.7em;
+    border-radius: 0 0 10px 10px !important;
+    padding: 0.3em 1.2em !important;
   }
 
   a.dropdown-toggle, ul.nav.navbar-nav li a {
