--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12038,13 +12038,13 @@ nav.navbar {
   width: 100%;
   padding-top: 35px;
 }
-.newsroom-nav-container .navbar-left {
+.newsroom-nav-container .navbar-nav {
   padding-top: 22px;
   padding-bottom: 22px;
   position: relative;
   z-index: 1;
 }
-.newsroom-nav-container .navbar-left h3 {
+.newsroom-nav-container .navbar-nav h3 {
   color: #ffffff;
   letter-spacing: 0.15em;
   text-transform: uppercase;
