--- a/www-root/includes/possible/dropdown-navbar.html
+++ b/www-root/includes/possible/dropdown-navbar.html
@@ -1,32 +1,37 @@
-<div class='navbar-wrapper' style="display: none;">
-  <nav id="navbar-possible" class="navbar">
-    <h2>Are you ready to find your <span class='possible-word'>possible</span>?</h2>
-    <ul class="nav nav-pills">
-      <li class="nav-item dropdown">
-        <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
-          <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
-          <a class="dropdown-item" href="#master-your-future">Master your future</a>
-          <!-- <a class="dropdown-item" href="#on-the-front-lines-of-cybersecurity">On the front lines of cybersecurity</a> -->
-          <!-- <a class="dropdown-item" href="#brewing-innovation-in-hospitality">Brewing innovation in hospitality</a> -->
-          <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
-          <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
-          <!-- <a class="dropdown-item" href="#operating-satelites-from-the-classroom">Operating satellites from the classroom</a> -->
-          <!-- <a class="dropdown-item" href="#multiply-your-roi">Multiply your ROI</a> -->
-        </div>
-      </li>
-    </ul>
-  </nav>
-</div>
+<nav id="navbar-possible" class="navbar navbar-fixed-top">
+  <h2>Are you ready to find your <span class='possible-word'>possible</span>?</h2>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+        <a class="nav-link" href="#reimagine-higher-education">Reimagine higher education</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#master-your-future">Master your future</a>
+    </li>
+    <!-- <li class="nav-item dropdown">
+      <a id='nav-showing' class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#reimagine-higher-education">Reimagine higher education</a>
+        <a class="dropdown-item" href="#learners-connect-with-leaders">Learners connect with leaders</a>
+        <a class="dropdown-item" href="#master-your-future">Master your future</a>
+
+        <a class="dropdown-item" href="#improving-health-in-colorado">Improving health in Colorado</a>
+        <a class="dropdown-item" href="#teaching-tomorrows-teachers">Teaching tomorrow's teachers</a>
+
+      </div>
+    </li> -->
+  </ul>
+</nav>
 
 
 <style>
   .navbar {
-    position: fixed;
+
     top: 0px;
 
-    background-color: #00447c !important;
+    background-color: #00447c;
     z-index: 999;
 
     width: 100%;
@@ -42,66 +47,12 @@
   }
 </style>
 
-
-<script>
-  const possibleSwitcher = el => {
-    const scroll = window.scrollY || window.pageYOffset
-    const boundsTop = el.getBoundingClientRect().top + scroll
-
-    const viewport = {
-      top: scroll,
-      bottom: scroll + window.innerHeight,
-    }
-
-    const bounds = {
-      top: boundsTop,
-      bottom: boundsTop + el.clientHeight,
-    }
-
-    return (bounds.bottom >= viewport.top && bounds.bottom <= viewport.bottom) ||
-      (bounds.top <= viewport.bottom && bounds.top >= viewport.top);
-  }
-
-  document.addEventListener('DOMContentLoaded', () => {
-    const rhe = document.getElementById('reimagine-higher-education')
-    const lcl = document.getElementById('learners-connect-with-leaders')
-    const myf = document.getElementById('master-your-future')
-    const otfloc = document.getElementById('on-the-front-lines-of-cybersecurity')
-    const biih = document.getElementById('brewing-innovation-in-hospitality')
-    const ihic = document.getElementById('improving-health-in-colorado')
-    const ttt = document.getElementById('teaching-tomorrows-teachers')
-    const osftc = document.getElementById('operating-satelites-from-the-classroom')
-    const roi = document.getElementById('multiply-your-roi')
-    const label = document.getElementById('nav-showing')
-
-
-    const handler = () => raf(() => {
-      if (possibleSwitcher(ihic)) {
-        label.innerHTML = 'Improving health in Colorado'
-        $('.navbar-wrapper').fadeIn()
-      } else if (possibleSwitcher(rhe)) {
-        label.innerHTML = 'Reimagine higher education'
-      } else if (possibleSwitcher(myf)) {
-        label.innerHTML = 'Master your future'
-      } else if (possibleSwitcher(ttt)) {
-        label.innerHTML = "Teaching tomorrow's teachers"
-      } else if (possibleSwitcher(lcl)) {
-        label.innerHTML = 'Learners connect with leaders'
-        $('.navbar-wrapper').fadeIn()
-      } else {
-        $('.navbar-wrapper').fadeOut()
-      }
-    })
-    handler()
-    window.addEventListener('scroll', handler)
+<script type="text/javascript">
+$(document).ready(function() {
+  $(window).on("activate.bs.scrollspy", function(){
+    const current = $(".nav li.active").text()
+    console.log("this is " + current)
 
   })
-
-  const raf =
-    window.requestAnimationFrame ||
-    window.webkitRequestAnimationFrame ||
-    window.mozRequestAnimationFrame ||
-    function(callback) {
-      window.setTimeout(callback, 1000 / 60)
-    }
+})
 </script>
