--- a/development/terminalfour/src/sass/possible.scss
+++ b/development/terminalfour/src/sass/possible.scss
@@ -275,8 +275,7 @@ button, [type="button"],// 1
 }
 
 .brewing-innovation-in-hospitality {
-  background: url(" ../media/possible/Abby_brewing.jpg") no-repeat center center;
-  height: auto;
+  background: url(" ../media/possible/abby-brewing.jpg") no-repeat center center;
   display: table;
   position: relative;
   width: 100%;
@@ -284,11 +283,14 @@ button, [type="button"],// 1
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+  .well {
+    background: $MSUDenver-white-tranparency;
+  }
 }
 
 .on-the-front-lines-of-cybersecurity {
   background: url(" ../media/possible/AndrewTraver.jpg") no-repeat center center;
-  height: auto;
   display: table;
   position: relative;
   width: 100%;
@@ -296,7 +298,10 @@ button, [type="button"],// 1
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  
+
+  .well {
+    background: $MSUDenver-white-tranparency;
+  }
 }
 
 .health-in-colorado {
