--- a/www-root/style-assets/css/possible.css
+++ b/www-root/style-assets/css/possible.css
@@ -225,8 +225,7 @@ button, [type="button"],
 }
 
 .brewing-innovation-in-hospitality {
-  background: url(" ../media/possible/Abby_brewing.jpg") no-repeat center center;
-  height: auto;
+  background: url(" ../media/possible/abby-brewing.jpg") no-repeat center center;
   display: table;
   position: relative;
   width: 100%;
@@ -235,10 +234,12 @@ button, [type="button"],
   -o-background-size: cover;
   background-size: cover;
 }
+.brewing-innovation-in-hospitality .well {
+  background: #ffffffde;
+}
 
 .on-the-front-lines-of-cybersecurity {
   background: url(" ../media/possible/AndrewTraver.jpg") no-repeat center center;
-  height: auto;
   display: table;
   position: relative;
   width: 100%;
@@ -246,6 +247,9 @@ button, [type="button"],
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+.on-the-front-lines-of-cybersecurity .well {
+  background: #ffffffde;
 }
 
 .health-in-colorado {
@@ -460,6 +464,24 @@ button, [type="button"],
 
   .teaching-tomorrows-teachers-section {
     background: url("../media/possible/Teaching-tomorrow-teachers.jpg") no-repeat center center fixed;
+    height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
+  .brewing-innovation-in-hospitality {
+    background: url(" ../media/possible/abby-brewing.jpg") no-repeat center center fixed;
+    height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
+  .on-the-front-lines-of-cybersecurity {
+    background: url(" ../media/possible/AndrewTraver.jpg") no-repeat center center fixed;
     height: auto;
     -webkit-background-size: cover;
     -moz-background-size: cover;
