--- a/www-root/includes/possible/reimagine-higher-education.html
+++ b/www-root/includes/possible/reimagine-higher-education.html
@@ -5,7 +5,10 @@
       A thriving urban university that fosters student success through classroom-to-career connections, relevant degrees and excellent faculty.
     </h3>
     <div class="row">
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-6 order-md-12">
+        <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
+      </div>
+      <div class="col-xs-12 col-md-6 order-md-1">
         <p></p>
         <p></p>
         <p>
@@ -15,9 +18,7 @@
           networks that jump-start careers. Just ask this <a href="https://red.msudenver.edu/2019/so-you-want-to-host-sportscenter.html">“SportsCenter” anchor</a>.</p>
         <h4>The possibilities are endless.</h4>
       </div>
-      <div class="col-xs-12 col-md-6">
-        <img class="img-thumbnail" src="style-assets/media/possible/pride.jpg">
-      </div>
+      
     </div>
   </div>
 </section>
